--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,22 @@
-<p>orders works!</p>
+<table class="table table-hover">
+    <thead class="thead-light">
+        <th>#Order No.</th>
+        <th>Customer</th>
+        <th>P. Method</th>
+        <th>G. Total</th>
+        <th>
+            <a class="btn btn-outline-success" routerLink="/order"><i class="fa fa-plus-square"></i> Create New</a>
+        </th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of orderList">
+            <td (click)="openForEdit(item._id)">{{item.orderNo}}</td>
+            <td (click)="openForEdit(item._id)">{{item.customerID.name}}</td>
+            <td (click)="openForEdit(item._id)">{{item.pMethod}}</td>
+            <td (click)="openForEdit(item._id)">{{item.gTotal}}</td>
+            <td>
+                <a class="btn btn-sm btn-danger text-white ml-1" (click)="onDeleteOrder(item._id)"><i class="fa fa-trash"></i></a>
+            </td>
+        </tr>
+    </tbody>
+</table>
