--- a/src/app/orders/order-items/order-items.component.html
+++ b/src/app/orders/order-items/order-items.component.html
@@ -1,12 +1,15 @@
 <h4 class="display-4">Order Food Item</h4>
 <hr>
-<form #form="ngForm" autocomplete="off">
+<form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
 
     <div class="form-group">
+        <input type="hidden" name="orderID"  #orderID='ngModel' [(ngModel)]="formData.orderID" >
+        <input type="hidden" name="itemName"  #itemName='ngModel' [(ngModel)]="formData.itemName" >
         <label>Food Item</label>
-        <!-- <select name="ItemID" #ItemID="ngModel" [(ngModel)]="service.formData._id" class="form-control">
-            <option value="0">-Select-</option>
-        </select> -->
+        <select name="itemID"  #itemID='ngModel' [(ngModel)]="formData.itemID" class="form-control" (change)="updatePrice($event.target)" [class.is-invalid]="!isValid && formData.itemID==0">
+            <option value="0">- Select -</option>
+            <option *ngFor="let item of itemList" value="{{ item._id }}">{{ item.name }}</option>
+        </select>
     </div> 
 
     <div class="form-row">
@@ -16,12 +19,12 @@
                 <div class="input-group-prepend">
                     <div class="input-group-text">€ </div>
                 </div>
-                <!-- <input name="Price" #Price='ngModel' [(ngModel)]="service.formData.price" class="form-control" readonly> -->
+                <input name="price" #price='ngModel' [(ngModel)]="formData.price" class="form-control" readonly>
             </div>
         </div>
         <div class="form-group col-md-6">
             <label>Quantity</label>
-            <!-- <input name="Quantity" #Quantity='ngModel' [(ngModel)]="service.formData.quantity" class="form-control"> -->
+            <input name="quantity" #quantity='ngModel' [(ngModel)]="formData.quantity" class="form-control" (keyup)="updateTotal()" [class.is-invalid]="!isValid && formData.quantity==0">
         </div>
     </div>
 
@@ -31,13 +34,13 @@
             <div class="input-group-prepend">
                 <div class="input-group-text">€ </div>
             </div>
-            <!-- <input name="Total" #Total='ngModel' [(ngModel)]="service.formData.total" class="form-control" readonly> -->
+            <input name="Total" #Total='ngModel' [(ngModel)]="formData.Total" class="form-control" readonly>
         </div>
     </div>
 
     <div class="form-group">
         <button type="submit" class="btn btn-dark"><i class="fa fa-database">Submit</i></button>
-        <button type="button" class="btn btn-outline-dark ml-1"><i class="fa fa-close">Close</i></button>
+        <button type="button" class="btn btn-outline-dark ml-1" [mat-dialog-close]><i class="fa fa-close">Close</i></button>
     </div>
 
 </form>
