--- a/src/app/orders/order/order.component.html
+++ b/src/app/orders/order/order.component.html
@@ -1,4 +1,5 @@
-<form #form="ngForm" autocomplete="off" *ngIf="service.formData">
+<form #form="ngForm" autocomplete="off" *ngIf="service.formData" (submit)="onSubmit(form)">
+    <input type="hidden" name="OrderID" #OrderID='ngModel' [(ngModel)]="service.formData.OrderID">
     <div class="row">
 
         <div class="col-md-6">
@@ -13,10 +14,11 @@
             </div>
             <div class="form-group">
                 <label>Customer</label>
-                <select name="CustomerID" #CustomerID='ngModel' [(ngModel)]="service.formData.customerID" class="form-control">
+                <select name="CustomerID" #CustomerID='ngModel' [(ngModel)]="service.formData.customerID" class="form-control" [class.is-invalid]="!isValid && service.formData.customerID==0">
                     <option value="0">-Select-</option>
+                    <option *ngFor="let item of customerList" value="{{item._id}}">{{item.name}}</option>
                 </select>
-            </div>
+            </div> 
         </div>
 
         <div class="col-md-6">
@@ -49,22 +51,23 @@
             <th>Quantity</th>
             <th>Total</th>
             <th>
-                <a href="" class="btn btn-sm btn-success text-white" (click)="AddOrEditOrderItem(null,service.formData._id)"><i class="fa fa-plus"></i>Add Item</a>
+                <a class="btn btn-sm btn-success text-white" (click)="AddOrEditOrderItem(null,service.formData._id)"><i class="fa fa-plus"></i>Add Item</a>
             </th>
         </thead>
         <tbody>
-            <tr *ngIf="service.orderItems.length==0">
+            <tr *ngIf="service.orderItems.length==0" [class.text-danger]="!isValid && service.orderItems.length==0">
                 <td class="font-italic text-center" colspan="5" >
                     No food item selected for this order.
                 </td>
             </tr>
             <tr *ngFor="let item of service.orderItems;let i=index">
                 <td>{{ item.itemName }}</td>
-                <td>{{ item.Price }}</td>
-                <td>{{ item.Quantity }}</td>
+                <td>{{ item.price }}</td>
+                <td>{{ item.quantity }}</td>
                 <td>{{ item.Total }}</td>
                 <td>
-                    <a href="" class="btn btn-sm btn-info text-white" (click)="AddOrEditOrderItem(i,service.formData._id)"><i class="fa fa-pencil"></i></a>
+                    <a class="btn btn-sm btn-info text-white" (click)="AddOrEditOrderItem(i,service.formData._id)"><i class="fa fa-pencil"></i></a>
+                    <a class="btn btn-sm btn-danger text-white ml-1" (click)="onDeleteOrderItem(item.itemID, i)"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         </tbody>
@@ -72,6 +75,6 @@
 
     <div class="form-group">
         <button type="submit" class="btn btn-dark"><i class="fa fa-database">Submit</i></button>
+        <a class="btn btn-outline-dark ml-1" routerLink="/orders"><i class="fa fa-table"></i> View Orders</a>
     </div>
-
 </form>
